--- a/proxy/docker-compose.yml
+++ b/proxy/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   app:
     image: 'jc21/nginx-proxy-manager:latest'
+    restart: always
     ports:
       - '80:80'
       - '81:81'
@@ -17,6 +18,7 @@ services:
       - ./letsencrypt:/etc/letsencrypt
   db:
     image: 'jc21/mariadb-aria:latest'
+    restart: always
     environment:
       MYSQL_ROOT_PASSWORD: 'npm'
       MYSQL_DATABASE: 'npm'
